django ci/cd setup

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,11 +1,11 @@
 services:
  # docker-compose up -d
  # ----------------------------------------
- # MEDNA-METADATA
+ # MEDNA-LIMS
  # ----------------------------------------
   medna_metadata_web:
     restart: always
-    image: medna:0.0.2
+    image: ghcr.io/${USER}/${REPO_NAME}:${APP_VERSION:-latest}
       #build:
       #  context: '../'
       #  dockerfile: 'docker/web/Dockerfile'
@@ -17,7 +17,6 @@ services:
       - 'medna.env'
     volumes:
       - 'static_volume:/home/django/medna-metadata/static/'
-        #      - '/root/medna-azti:/home/django/medna-metadata'
     depends_on:
       - medna_metadata_pgdb
   # ----------------------------------------
@@ -95,7 +94,7 @@ services:
     image: nginx:1.21-alpine
     container_name: nginx
     ports:
-      - 80:80   # expose ports - HOST:CONTAINER
+      - 80:80
       - 443:443 # HTTPS port
     env_file:
       - 'medna.env'
@@ -118,7 +117,7 @@ services:
   #     - 'medna.env'
   #   volumes:
   #     - 'certbot_etc:/etc/letsencrypt'
-  #     - 'certbot_var:/var/lib/letsencrypt'  
+  #     - 'certbot_var:/var/lib/letsencrypt'
   #     - './certbot/www:/var/www/certbot'
   #   entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew --webroot -w /var/www/certbot; sleep 12h & wait $${!}; done;'"
   #   depends_on:
