--- a/docker/medna.env
+++ b/docker/medna.env
@@ -6,7 +6,7 @@
 # List of time zones: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 ####################################################################
 DJANGO_SECRET_KEY=your_secret_key
-DJANGO_ALLOWED_HOSTS=localhost gorkadev.htx-web.embl.fr
+DJANGO_ALLOWED_HOSTS=localhost
 DJANGO_ALLAUTH_HOST=your_domain
 DJANGO_SETTINGS_MODULE=medna_metadata.settings
 DJANGO_DEBUG=True
@@ -17,9 +17,9 @@ TIME_ZONE=Europe/Paris
 # Creates a superuser account (a user who has all permissions).
 # https://docs.djangoproject.com/en/4.0/ref/django-admin/#createsuperuser
 ####################################################################
-DJANGO_SUPERUSER_PASSWORD=admin
-DJANGO_SUPERUSER_EMAIL=admin@domain.com
-DJANGO_SUPERUSER_USERNAME=admin@domain.com
+#DJANGO_SUPERUSER_PASSWORD=
+#DJANGO_SUPERUSER_EMAIL=
+#DJANGO_SUPERUSER_USERNAME=
 
 ####################################################################
 # web_start.sh settings
@@ -33,7 +33,7 @@ DJANGO_SUPERUSER_USERNAME=admin@domain.com
 # entrypoint.sh settings
 # ENTRYPOINT_DATABASE & ENTRYPOINT_MESSAGING - name of entrypoint to wait for; do not change these values unless updating entrypoint.sh and the type of messaging server or database
 ####################################################################
-DJANGO_MANAGEPY_MIGRATE=on
+DJANGO_MANAGEPY_MIGRATE=off
 DJANGO_DATABASE_FLUSH=off
 DJANGO_SUPERUSER_CREATE=off
 DJANGO_DEFAULT_GROUPS_CREATE=off
@@ -47,10 +47,10 @@ ENTRYPOINT_MESSAGING=rabbitmq
 # django database settings; loaded in settings.py
 # https://docs.djangoproject.com/en/4.0/ref/settings/#databases
 ####################################################################
-DJANGO_DATABASE_NAME=medna_azti
-DJANGO_DATABASE_TESTNAME=test_medna_azti
-DJANGO_DATABASE_USERNAME=admin
-DJANGO_DATABASE_PASSWORD=admin123
+#DJANGO_DATABASE_NAME=
+#DJANGO_DATABASE_TESTNAME=
+#DJANGO_DATABASE_USERNAME=
+#DJANGO_DATABASE_PASSWORD=
 DJANGO_DATABASE_HOST=medna_metadata_pgdb
 DJANGO_DATABASE_PORT=5432
 
@@ -67,8 +67,8 @@ DB_BACKUPS=False
 # django smtp (email) settings; loaded in settings.py
 # https://docs.djangoproject.com/en/4.0/topics/email/
 ####################################################################
-DJANGO_EMAIL_HOST_USER=admin@domain.com
-DJANGO_EMAIL_HOST_PASSWORD=admin123
+DJANGO_EMAIL_HOST_USER=
+DJANGO_EMAIL_HOST_PASSWORD=
 
 ####################################################################
 # django-storages settings; loaded in settings.py
