--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,15 +6,12 @@ services:
   medna_metadata_web:
     restart: always
     image: ghcr.io/${USER}/${REPO_NAME}:${APP_VERSION:-latest}
-      #build:
-      #  context: '../'
-      #  dockerfile: 'docker/web/Dockerfile'
     container_name: medna_metadata_web
-      #command: /home/django/medna-metadata/docker/web/webdev_start.sh
     ports:
       - 8000:8000
     env_file:
       - 'medna.env'
+      - 'django.env'
     volumes:
       - 'static_volume:/home/django/medna-metadata/static/'
     depends_on:
