--- a/.github/workflows/deployment_prod.yml
+++ b/.github/workflows/deployment_prod.yml
@@ -36,8 +36,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          file: ./docker/web/Dockerfile
           context: .
+          file: docker/web/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
 
