--- a/docker/medna.env
+++ b/docker/medna.env
@@ -5,7 +5,7 @@
 # https://docs.djangoproject.com/en/4.0/ref/settings/#std-setting-TIME_ZONE
 # List of time zones: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 ####################################################################
-DJANGO_SECRET_KEY=your_secret_key
+DJANGO_SECRET_KEY=
 DJANGO_ALLOWED_HOSTS=localhost
 DJANGO_ALLAUTH_HOST=your_domain
 DJANGO_SETTINGS_MODULE=medna_metadata.settings
