--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -17,7 +17,32 @@ map $http_user_agent $block_scanner {
 
 server {
     listen 80;
+    server_name limsedna.duckdns.org;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+# ---------------------------------------------------------
+# HTTPS - PORT 443 (Your Main App)
+# ---------------------------------------------------------
+server {
+    listen 443 ssl;
+    server_name limsedna.duckdns.org;
     charset utf-8;
+
+    # SSL CERTIFICATE PATHS
+    ssl_certificate /etc/letsencrypt/live/limsedna.duckdns.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/limsedna.duckdns.org/privkey.pem;
+
+    # SECURITY BEST PRACTICES
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
 
     # Block scanner user agents
     if ($block_scanner) {
@@ -39,8 +64,8 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_redirect off;
         client_max_body_size 100m;
     }
 }
-
