--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,5 +1,4 @@
 services:
- # docker-compose up -d
  # ----------------------------------------
  # MEDNA-LIMS
  # ----------------------------------------
@@ -83,16 +82,16 @@ services:
 #       - medna_metadata_rabbitmq
 #       - medna_metadata_web
 #       - medna_metadata_celeryworker
- # ----------------------------------------
- # NGINX
- # ----------------------------------------
+  # ----------------------------------------
+  # NGINX
+  # ----------------------------------------
   nginx:
     restart: always
     image: nginx:1.21-alpine
     container_name: nginx
     ports:
       - 80:80
-      - 443:443 # HTTPS port
+      - 443:443
     env_file:
       - 'medna.env'
     volumes:
@@ -100,30 +99,27 @@ services:
       - 'media_volume:/home/django/medna-metadata/media/'
       - './nginx/default.conf:/etc/nginx/conf.d/default.conf'
       - '/var/run/docker.sock:/tmp/docker.sock:ro'
-      # - 'certbot_etc:/etc/letsencrypt'
-      # - 'certbot_var:/var/lib/letsencrypt'
+      # Shared volumes for SSL certificates and verification
+      - ./certbot/conf/:/etc/letsencrypt:ro
+      - ./certbot/www:/var/www/certbot:ro
     depends_on:
       - medna_metadata_web
+      - certbot
   # ----------------------------------------
   # CERTBOT - SSL Certificate Management
   # ----------------------------------------
-  # certbot:
-  #   image: certbot/certbot:latest
-  #   container_name: certbot
-  #   env_file:
-  #     - 'medna.env'
-  #   volumes:
-  #     - 'certbot_etc:/etc/letsencrypt'
-  #     - 'certbot_var:/var/lib/letsencrypt'
-  #     - './certbot/www:/var/www/certbot'
-  #   entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew --webroot -w /var/www/certbot; sleep 12h & wait $${!}; done;'"
-  #   depends_on:
-  #     - nginx
+  certbot:
+    image: certbot/certbot:latest
+    container_name: certbot
+    volumes:
+      - ./certbot/www/:/var/www/certbot/:rw
+      - ./certbot/conf/:/etc/letsencrypt/:rw
+    # This entrypoint checks for renewal every 12 hours
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+
 volumes:
   postgres_data:
-  rabbitmq_data:
-  rabbitmq_logs:
+  # rabbitmq_data:
+  # rabbitmq_logs:
   static_volume:
   media_volume:
-  # certbot_etc:
-  # certbot_var:
